--- a/MakeModel.ipynb
+++ b/MakeModel.ipynb
@@ -44,8 +44,8 @@
    "outputs": [],
    "source": [
     "# read the datasets\n",
-    "data_batch_train = unpickle(\"/Users/kittyli/Downloads/cifar-10-batches-py/data_batch_1\")\n",
-    "data_batch_test = unpickle(\"/Users/kittyli/Downloads/cifar-10-batches-py/test_batch\")"
+    "data_batch_train = unpickle(\"data_batch_1\")\n",
+    "data_batch_test = unpickle(\"test_batch\")"
    ]
   },
   {
@@ -139,7 +139,7 @@
    ],
    "source": [
     "# load meta file to get the label name\n",
-    "meta_file = '/Users/kittyli/Downloads/cifar-10-batches-py/batches.meta'\n",
+    "meta_file = 'batches.meta'\n",
     "meta_data = unpickle(meta_file)\n",
     "print(\"Label Names:\", meta_data[b'label_names'] )"
    ]
